--- a/weather/templates/weather/forecast-alert.html
+++ b/weather/templates/weather/forecast-alert.html
@@ -2,19 +2,81 @@
 
 <!DOCTYPE html>
 <html>
+<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <head>
-	<title>Forecast - Alert!</title>
-	
-	<link rel="stylesheet" type="text/css" href="{% static 'weather/vendors/bootstrap/css/bootstrap.css' %}" />
-	<link rel="stylesheet" type="text/css" href="{% static 'weather/css/style.css' %}" />
+  <style> 
+    body {
+    background: linear-gradient(to bottom, #0066ff 0%, #cc00cc 100%);
+}</style>
+  <title>Forecast - Alert!</title>
+
+  <link rel="stylesheet" type="text/css" href="{% static 'weather/vendors/bootstrap/css/bootstrap.css' %}" />
+  <link rel="stylesheet" type="text/css" href="{% static 'weather/css/style.css' %}" />
 
 </head>
+
 <body>
-	<!-- your single-location forecast with alert interface here -->
+
+  <body class="text-center" style="padding: 20PX;">
+    <div class="container">
+      <h3>Paradise Planner</h3>
+    </div>
+
+
+    <div class="container">
+
+      <div class "row">
+        <div class="col-xs-4">
+          <button type="button" class="btn btn-primary" style="float: left;"> <img src = "https://www.svgrepo.com/show/135127/list.svg" style = "height: 20px"> </button>
+        </div>
+        <div class="col-xs-4">
+          <h1> Berkeley </h1>
+          <h4>
+            California
+          </h4>
+          <br style=“ line-height:50px;”> </br>
+          <h1>61<span>&#176;</span>F</h1>
+          <img src="https://www.svgrepo.com/show/11550/night.svg" style="height: 100px">
+          <h3>slightly cloudy</h3>
+          <br>
+
+
+
+        </div>
+        <div class="col-xs-4">
+          <button type="button" class="btn btn-primary" style="float: right;"> <img src = "https://upload.wikimedia.org/wikipedia/commons/f/f1/Heart_coraz%C3%B3n.svg" style = "height: 20px"> </button>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+
+          <button type="button" class="btn btn-light" style="float: right;"> <img src = "https://cdn4.iconfinder.com/data/icons/ios7-essence/22/add_plus-512.png" style = "height: 20px"> </button>
+        </div>
+      </div>
+    </div>
+    <h4>61&#176; &nbsp;&nbsp;&nbsp; 60&#176; &nbsp;&nbsp;&nbsp; 59&#176; &nbsp;&nbsp;&nbsp; 57&#176; &nbsp;&nbsp;&nbsp; 54&#176; &nbsp;&nbsp;&nbsp; 52&#176;</h4>
+    <h4>Now &nbsp; 10PM &nbsp; 11PM &nbsp; 12AM &nbsp; 1AM &nbsp; 2AM</h4>
+    <hr>
+
+    <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-9/53609124_2133692320053347_2795325884884582400_o.jpg?_nc_cat=108&_nc_oc=AQntzCnXsSh8o67Pl5n1RLpkKMvOKxig4MYoA3BQbg3HSDrBnPQVOkmkkWSZV9iCnx7EgZM9ofbOAr7sKzdMuqLX&_nc_ht=scontent-sjc3-1.xx&oh=e0e1db5d43410f1f0fcc5ed0a481f3c7&oe=5D877A0C"
+      style="height: 250px">
+    <h2 style = "color: red"> WARNING! WIND SPEEDS > 50 MPH</h2>
+    <h3> TAP FOR DETAILS</h3>
+  </body>
+
 </body>
+
 </html>
-
-
-
-
-
